kubernetes/easyshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easyshop:v1.02
  namespace: easyshop:v1.02
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyshop:v1.02
  template:
    metadata:
      labels:
        app: easyshop:v1.02
    spec:
      containers:
        - name: easyshop:v1.02
          image: nileshfatfatwale/easyshop:v1.02
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 20

---

apiVersion: v1
kind: Service
metadata:
  name: easyshop:v1.02
  namespace: easyshop:v1.02
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: easyshop:v1.02
