kubernetes/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - prometheus.nileshfatfatwale.com
    - grafana.nileshfatfatwale.com
    secretName: monitoring-tls
  rules:
  - host: prometheus.nileshfatfatwale.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus    # kubectl se exact name check kar
            port:
              number: 9090
  - host: grafana.nileshfatfatwale.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana       # kubectl se exact name check kar
            port:
              number: 80
